tests/spec/emit/snapshots/raw_string_simple.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() {\n  `hello world`\n}\n"
---
package main

func test() {
	_ = `hello world`
}
