tests/spec/emit/snapshots/raw_string_with_backslashes.snap
---
source: tests/spec/emit/literals.rs
description: "input: \nfn test() {\n  `C:\\Users\\foo\\bar`\n}\n"
---
package main

func test() {
	_ = `C:\Users\foo\bar`
}
