tests/spec/emit/snapshots/recursive_enum_pattern_match_derefs_pointer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum List {
    Cons(int, List),
    Nil,
  }
  
  fn list_sum(l: List) -> int {
    match l {
      List.Cons(head, tail) => head + list_sum(tail),
      List.Nil => 0,
    }
  }
---
package main

func MakeListCons(arg0 int, arg1 List) List {
	return List{Tag: ListCons, Cons0: arg0, Cons1: &arg1}
}

func MakeListNil() List {
	return List{Tag: ListNil}
}

type ListTag int

const (
	ListCons ListTag = iota
	ListNil
)

type List struct {
	Tag   ListTag
	Cons0 int
	Cons1 *List
}

func list_sum(l List) int {
	if l.Tag == ListCons {
		return l.Cons0 + list_sum((*l.Cons1))
	}
	return 0
}
