tests/spec/emit/snapshots/recursive_enum_ptr_temp_var_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  enum Node {
    Leaf { value: int },
    Branch { left: Node, right: Node },
  }
  
  fn main() {
    let n = Node.Branch { left: Node.Leaf { value: 1 }, right: Node.Leaf { value: 2 } }
    let ptr_1 = 3
    fmt.Println(n)
    fmt.Println(ptr_1)
  }
---
package main

import "fmt"

func MakeNodeLeaf(arg0 int) Node {
	return Node{Tag: NodeLeaf, Value: arg0}
}

func MakeNodeBranch(arg0 Node, arg1 Node) Node {
	return Node{Tag: NodeBranch, Left: &arg0, Right: &arg1}
}

type NodeTag int

const (
	NodeLeaf NodeTag = iota
	NodeBranch
)

type Node struct {
	Tag   NodeTag
	Value int
	Left  *Node
	Right *Node
}

func main() {
	ptr_1 := Node{
		Tag:   NodeLeaf,
		Value: 1,
	}
	ptr_2 := Node{
		Tag:   NodeLeaf,
		Value: 2,
	}
	n := Node{
		Tag:   NodeBranch,
		Left:  &ptr_1,
		Right: &ptr_2,
	}
	ptr_1_3 := 3
	fmt.Println(n)
	fmt.Println(ptr_1_3)
}
