tests/spec/emit/snapshots/recursive_enum_tree.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Tree {
    Leaf(int),
    Node(Tree, Tree),
  }
  
  fn test() -> Tree {
    Tree.Node(Tree.Leaf(1), Tree.Leaf(2))
  }
---
package main

func MakeTreeLeaf(arg0 int) Tree {
	return Tree{Tag: TreeLeaf, Leaf: arg0}
}

func MakeTreeNode(arg0 Tree, arg1 Tree) Tree {
	return Tree{Tag: TreeNode, Node0: &arg0, Node1: &arg1}
}

type TreeTag int

const (
	TreeLeaf TreeTag = iota
	TreeNode
)

type Tree struct {
	Tag   TreeTag
	Leaf  int
	Node0 *Tree
	Node1 *Tree
}

func test() Tree {
	return MakeTreeNode(MakeTreeLeaf(1), MakeTreeLeaf(2))
}
