tests/spec/emit/snapshots/recursive_enum_variable_stored_constructor.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  enum List {
    Nil,
    Cons(int, List),
  }
  
  fn main() {
    let make = List.Cons
    let xs = make(1, List.Nil)
    let _ = xs
  }
---
package main

func MakeListNil() List {
	return List{Tag: ListNil}
}

func MakeListCons(arg0 int, arg1 List) List {
	return List{Tag: ListCons, Cons0: arg0, Cons1: &arg1}
}

type ListTag int

const (
	ListNil ListTag = iota
	ListCons
)

type List struct {
	Tag   ListTag
	Cons0 int
	Cons1 *List
}

func main() {
	make_ := MakeListCons
	xs := make_(1, MakeListNil())
	_ = xs
}
