tests/spec/emit/snapshots/slice_new_unknown_element_explicit_type_arg.snap
---
source: tests/spec/emit/prelude.rs
assertion_line: 136
description: "input: \nfn test() {\n  let mut s = Slice.new<Unknown>()\n  s = s.append(\"Lilian\")\n}\n"
---
package main

func test() {
	s := []any{}
	s = append(s, "Lilian")
}
