tests/spec/emit/snapshots/struct_key_with_array_field_renders_comparable_bound.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  struct Key<T> {
    value: Array<T, 2>,
  }
  
  fn f<T>(m: Map<Key<T>, int>) -> int {
    m.length()
  }
---
package main

type Key[T any] struct {
	value [2]T
}

func f[T comparable](m map[Key[T]]int) int {
	return len(m)
}
